<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".ActividadPrincipal">

    <TextView
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/textoPrincipal"
        android:text="@string/test_hardware"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:paddingLeft="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_hardware"
        android:textColor="@color/textoPrincipal"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecera"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/textViewPregunta"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/comenzar"
        android:textAlignment="center"
        android:textColor="@color/textoSecundario"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/botonComenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonComenzar"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/botonSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPregunta" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginBottom="192dp"
        android:text="@string/botonSalir"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>